# SAFE

./: README.md  pyproject.toml  requirements.txt  setup.py
configs/: base.yaml  h100_16gpu.yaml  h100_8gpu.yaml
notebooks/: mainD.py  readme.md
safe/: __init__.py  config.py
safe/controllers/: __init__.py  asymmetric.py  base.py  entropy_aware.py  pid.py
safe/data/: __init__.py  dataset.py
safe/distributed/: __init__.py  placement.py  ray_trainer.py  utils.py
safe/models/: __init__.py  critic.py
safe/reward/: __init__.py  reward_model.py
safe/trainers/: __init__.py  asymmetric_kl.py  base.py  ppo.py  safe.py
scripts/: evaluate.py  train.py  train_distributed.py
